and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.0.4.2 - TERMINAL] - 18-09-2021
### Added
- Settings command for the terminal, I don't know why lol
- Settings for the terminal, change them via the settings command
- When closing the terminal now it saves a .json file that contains the terminal settings

### Changed
- The exit message

### Removed
- Reverted the update of capital letter command and detection of it idk how to call it lol

### Bug Fixes
- Lil hotfix, added the code for the terminal title and the terminal ver option stuff

### Issues
- When the .json file that contains the terminal settings doesnt exists the terminal just doesnt runs
- Sometimes the settings menu wont work if there isnt a valid state / value for the option, only happens if you mess up the .json file

## [0.0.4.1 - TERMINAL] - 17-09-2021
### Added
- A help command for the terminal, idk it looked cool
- The help command uses the helpmenu.js
- Migrated the send command to readline, embed pending

### Changed
- Now when not typing correctly a command, a message will log saying the correct command or something
- The thing above me will probably be reverted and also now the command has to be typed with the first letter in capital
- The two above will probably get reverted
- Split Status command to 2 different ones, "Status Change" and "Status Restart" due to idk how to make commands with args

### Removed
- The cmdessentials.js file due to deleting Inquirer and Vorpal since 0.0.4 tho I did a backup just in case

### Bug Fixes

### Issues

## [0.0.4 - TERMINAL] - 16-09-2021
### Added
- 

### Changed
- Migrated to Readline

### Removed
- Vorpal package to prevent vurnerabilities lol
- Some commands that required inquirer stuff, due to readline limitation I can't ask a question without glitching the whole terminal
- WOKCommands package (Finally lol)
- Inquirer package because I don't know how to use it with readline bruh

### Bug Fixes

### Issues
